crates/ink/tests/ui/contract/fail/message-returns-self.stderr
error: ink! messages must not return `Self`
  --> tests/ui/contract/fail/message-returns-self.rs:15:39
   |
15 |         pub fn returns_self(&self) -> Self {}
   |                                       ^^^^
